--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "contentful": "^11.5.14",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
