--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@tailwindcss/typography": "^0.5.16",
     "contentful": "^11.5.14",
+    "lucide-react": "^0.536.0",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
