--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "contentful": "^11.7.15",
     "lucide-react": "^0.536.0",
-    "next": "15.2.4",
+    "next": "14.2.3",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "resend": "^4.8.0",
     "tailwindcss": "^4.1.3"
   },
@@ -26,10 +26,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
     "typescript": "^5"
   }
 }
